# Mothership

./: .dockerignore  .gitignore  CLI_DISTRIBUTION_SUMMARY.md  Cargo.toml  DISCONNECT_GUIDE.md  Dockerfile.server  LICENSE  MothershipVision.md  README.md  SERVER_CONFIG.md  TESTING_DISTRIBUTION.md  TODO_NOW.txt  app.js  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  mothership-tunnel.yml  oauth-success.html  robots.txt  server.config  server.config.dual-port.example  server.config.example  server.config.secure.example  server.config.simple.example  start-docker.bat  start-docker.sh  test-beam-daemon.bat  test-disconnect-functionality.bat  utf8-test.txt  websocket-connection-test.rs  websocket-test.rs  whitelist.config  whitelist.config.example
.github/workflows/: release.yml
.sqlx/: query-00b56ba2c404f0e0116a963ba0a457c3ec5368615620b14ac326c9ab05b46af2.json  query-0cca6af225536864ce97bd8609b99f22b55f27a81a4874822b232a9c3ef1e1d9.json  query-24d051325f2fb4d0f79b815828d13a5abf9b36b231086ecc3561cedcfd0ad47f.json  query-4261df29dbc77a1a4a9b7245227ae5e48d63ce5363e2d663bbf4c47acf8db234.json  query-46162eea3b6fa26eea11369602a376b8a6f35d335638ac6a59ad4a29c7cd2e81.json  query-7bcf844b1dac884f42a0d36e8eabb103a6fdebf14025453ba6d73d82555db038.json  query-b66ed18fe5f6171a088a62095d0122087dbe559adb0ebcf6d949bdedcb937536.json  query-bec6ee2c2b1ff602d224310e51a992a873a5e0e18d65b573d360be83354ac343.json  query-c06ca59489ec49be63abc21a46e3e6e10ed065efd1b0309f17803fc6052bb85f.json  query-d5e5d33d2fc9cd68fe5fd6f4bfcf87c8f655e861634f89ab43fc533bfdce0d14.json  query-e742db9b2f1fd91dc901ecbc7563e822244157c314842318f24ece6e18f27c9f.json  query-f889e0cbeb9c3e64c99ab6a87132f9d01d1e8fd2b88ac914680d3b5f23d994be.json
auth-server/: Dockerfile  package-lock.json  package.json  server.js
migrations/: 001_initial_schema.sql  002_rift_schema.sql
mothership-cli/: Cargo.toml
mothership-cli/src/: api.rs  auth.rs  beam.rs  config.rs  connections.rs  file_watcher.rs  gateway.rs  main.rs  sync.rs  update.rs
mothership-common/: Cargo.toml
mothership-common/src/: auth.rs  crdt.rs  diff.rs  lib.rs  protocol.rs  transaction.rs
mothership-daemon/: Cargo.toml
mothership-daemon/src/: daemon.rs  file_watcher.rs  ipc_server.rs  main.rs  project_scanner.rs  system_tray.rs  windows_service.rs
mothership-gui/: Cargo.toml  README.md  browser-test.html  demo.md  index.html  launch-demo.ps1  main.js  package-lock.json  package.json  tauri.conf.json  vite.config.js
mothership-gui/capabilities/: main.json
mothership-gui/icons/: icon.icns
mothership-gui/src/: main.rs
mothership-gui/src-tauri/: tauri.conf.json
mothership-gui/src-tauri/capabilities/: main.json
mothership-server/: .sqlxrc  Cargo.toml  server.config
mothership-server/.sqlx/: query-5cbc9af79156afcaa835cce0062d6e0b85f51bee605fdc06df49f9145d66ee06.json  query-6943d377fe7c74b36872b5c429a5c52cc1f30ef72c4950cbfecf2f5ea05a495a.json  query-6d58c5ea36c4990c6ec8687d13e940959b8cc9bad85c49622d6e7c60da3ad6a6.json  query-8000e7d3cb2eb761a8a951d3a3edf70895b8867782f245486e385ee8ee5b90fa.json  query-91a2d6695f62fdb5b5f68618f9c3a028a6cb56fe6924a41bb6b91fa2f2b4eb33.json  query-a2102838048cea414994ef43555337f3bffcd8e031536ab4bf92eca0f8400c90.json  query-a3ab88fe86190f71e3c1d4e4d1cd7342a1667efd85b9cea6e6c78146c65919d9.json  query-f1366aeae4f94616fb6574c3df103ff3edec75dd15f407b81e6b83e935e72a1c.json  query-f2b89c8fcd034b861db057279e68fc07411b78f00cdd845f0a724a05de945876.json
mothership-server/migrations/: 001_initial_schema.sql
mothership-server/src/: auth.rs  cli_distribution.rs  config.rs  database.rs  handlers.rs  main.rs  oauth.rs  storage.rs  sync.rs  web_ui.rs
poop/: poop.txt
poop2/: immediate-test.py
poop2/testdir/: subdir-test.js
scripts/: build-and-stage-cli.ps1  build-for-distribution.sh  integration-test.ps1  integration-test.sh
storage/: .gitignore
test-final-fix/: connection-test.txt  debug-test.txt  final-test.txt  force-trigger.txt  obvious-test.txt  ssl-test.txt  sync-test.txt  test-file-change.txt  tls-fix-test.txt  websocket-test.txt
test-production/: production-test.txt
test-production-2/: production-fix-test.txt
test-websocket-fix/: connection-test.txt  daemon-debug-test.txt  daemon-websocket-test.txt  debug-test.txt  simple-test.md  simple-test.txt  utf8-test.txt  websocket-debug.txt  websocket-test.txt
test-websocket-local/test-websocket-fix/: local-test.txt
test200/: demon-banished.txt  holy-fix-test.txt  testing123.txt  testing456.txt
testy/: test.txt
websocket-fresh-test/: debug-trigger.txt  fresh-test.txt  simple-ascii-test.txt  websocket-fix-test.txt
websocket-test/: Cargo.toml
websocket-test/src/: main.rs
