[workspace]
members = [
    "mothership-server",
    "mothership-cli", 
    "mothership-common",
    "mothership-gui",
    "mothership-daemon"
]
resolver = "2"

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Web framework and HTTP
axum = { version = "0.7", features = ["ws", "tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Crypto and auth
uuid = { version = "1.6", features = ["v4", "serde"] }
jsonwebtoken = "9.2"
ring = "0.17"

# CLI
clap = { version = "4.4", features = ["derive"] }

# File system
notify = "6.1"
walkdir = "2.4"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
dotenvy = "0.15"
thiserror = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] } 