[package]
name = "mothership-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
flate2 = "1.0" # PERFORMANCE FIX: Compression for diff batching
sha2 = "0.10" 