[package]
name = "mothership-daemon"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "mothership-daemon"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# HTTP server for IPC communication with CLI
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# File watching
notify = "6.1"
walkdir = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for communicating with Mothership server
reqwest = { version = "0.11", features = ["json"] }

# WebSocket support for real-time sync
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
futures = "0.3"

# Common types
mothership-common = { path = "../mothership-common" }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
# Windows service management
windows-service = "0.6"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]}

# System tray integration
tray-icon = "0.14"
winit = "0.29"
image = "0.24"  # For loading PNG icons
winapi = { version = "0.3", features = ["winuser"] }

# Windows registry for auto-start
winreg = "0.52"

# Directory monitoring
dirs = "5.0"

# URL encoding for WebSocket authentication
urlencoding = "2.1"

# Crypto for hashing
sha2 = "0.10"

# Random number generation
rand = "0.8"

[features]
default = []
service = []  # Enable Windows service mode 