[package]
name = "mothership-gui"
version = "0.1.0"
description = "Mothership GUI Application with Vim Integration"
authors = ["Mothership Team"]
license = "MIT"
repository = "https://github.com/mothership/mothership"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Mothership core dependencies
mothership-common = { path = "../mothership-common" }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"] 
