[package]
name = "mothership-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mothership-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
mothership-common = { path = "../mothership-common" }

# Async runtime
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Auth & crypto
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
ring = { workspace = true }

# Utilities
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }

# OAuth2 for Google/GitHub
oauth2 = "4.4"
reqwest = { workspace = true }
urlencoding = "2.1"

# Cryptography for content hashing
sha2 = "0.10"

# Configuration
toml = "0.8" 